# matrix-coder-agent

./: .gitignore  PUBLISHING.md  QUICKSTART.md  README.md  agent.py  main.py  prompts.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
docker/: Dockerfile  aws-authenticate.sh  install-tooling.sh  run
src/matrix_coder_agent/: __init__.py  agent.py  cli.py
