[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-coder-agent"
version = "0.2.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "Autonomous development agent using AWS Bedrock and Strands SDK"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["ai", "agent", "aws", "bedrock", "strands", "autonomous", "development", "llm"]
license = {text = "MIT"}

dependencies = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "boto3>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/mirror12k/matrix-coder-agent"
Documentation = "https://github.com/mirror12k/matrix-coder-agent#readme"
Repository = "https://github.com/mirror12k/matrix-coder-agent"
"Bug Tracker" = "https://github.com/mirror12k/matrix-coder-agent/issues"

[project.scripts]
matrix-coder-agent = "matrix_coder_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
